# explainable-tourism-nlp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  verify_installation.py
.dvc/: .gitignore  config
.github/: copilot-instructions.md
.github/workflows/: deploy-backend-hf.yml
docs/: mkdocs.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_model_training.ipynb  04_training_and_evaluation.ipynb  05_model_evaluation.ipynb  06_huggingface_deployment.ipynb  tourism_data_cleaning_and_entity_linking.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/model_artifacts/model/: MLmodel  conda.yaml
reports/: explainable-tourism-nlp-medium-article.md  explainable-tourism-nlp-presentation.md  serendip-experiential-engine-technical-report.md  tourism-review-classification-technical-report.md
reports/artifacts/: classification_report.json  requirements.txt  test_predictions.npy
serendip-experiential-engine/: .env.example  .gitignore  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  Makefile  README.md  RESET_REDEPLOY_GUIDE.md  TESTING.md  cleanup_space.sh  complete_test.py  compose.yaml  deploy_all.sh  deploy_backend_simple.sh  deploy_backend_to_hf.sh  deploy_frontend_update.sh  deploy_huggingface_fixed.sh  deploy_huggingface_reset_storage.sh  deploy_reset_cache.sh  docker-compose.yml  force_update_deploy.sh  monitor_storage.sh  postman_collection.json  postman_testing_guide.md  pytest.ini  setup.sh  simple_deploy.sh  test-compose.yml  test_api.py  test_backend_frontend.py  test_chart_display.py  test_serendip_api.sh
serendip-experiential-engine/backend/: .gitattributes  Dockerfile  Dockerfile.hf  Dockerfile.huggingface  README.md  api.py  app.py  deploy_to_huggingface.sh  main.py  requirements.txt
serendip-experiential-engine/docs/: openai-setup.md
serendip-experiential-engine/frontend/: Dockerfile  Dockerfile.hf  Dockerfile.huggingface  README.md  api_key_fix.py  api_service.py  app.py  app.py.backup  app.py.fixed  config.py  deploy_to_huggingface.sh  docker-compose.yml  genai_module.py  requirements.txt  styles.css  test_import.py
serendip-experiential-engine/notebooks/: api_usage_example.ipynb
serendip-experiential-engine/tests/: run_tests.sh  test_api.py
tourism-review-classification/: .env.example  Makefile  README.md  environment.yml  pyproject.toml  verify_installation.py
tourism-review-classification/data/processed/: classification_report.json  prediction_analysis_results.json  test_predictions.npy  training_results.json
tourism-review-classification/docs/: README.md  mkdocs.yml
tourism-review-classification/docs/docs/: getting-started.md  index.md
tourism-review-classification/notebooks/: 01_eda.ipynb
tourism-review-classifier/: __init__.py  dataset.py  features.py  plots.py
tourism-review-classifier/modeling/: predict.py  train.py
(+3 files in other folders)
