[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "serendip-experiential-engine"
version = "0.1.0"
description = "An explainable NLP model to classify experiential dimensions (e.g., Regenerative Tourism, Wellness) from Sri Lankan tourist reviews using a fine-tuned transformer architecture."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["serendip-experiential-engine"]
include = ["pyproject.toml", "serendip-experiential-engine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["serendip-experiential-engine"]
force-sort-within-sections = true

